[gd_scene load_steps=3 format=3 uid="uid://bf5l8tq7g6k37"]

[ext_resource type="Script" path="res://src/properties/shading/PropShading.gd" id="1_cktml"]
[ext_resource type="Script" path="res://src/widgets/ValSlider.gd" id="1_hwtdy"]

[node name="Shading" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_cktml")

[node name="title" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"title"
text = "Shading Tool"
horizontal_alignment = 1

[node name="divider" type="HSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"HDivider"

[node name="StrokeWidth" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(85, 32)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("1_hwtdy")
prefix = "Size:"
suffix = "px"

[node name="holder" type="HSeparator" parent="."]
layout_mode = 2

[node name="label-modes" type="Label" parent="."]
layout_mode = 2
text = "Shading modes"

[node name="OptLighten" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Lighten"
popup/item_0/id = 0
popup/item_1/text = "Darken"
popup/item_1/id = 1

[node name="OptSimpleShading" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Simple Shading"
popup/item_0/id = 0
popup/item_1/text = "Hue Shifting"
popup/item_1/id = 1

[node name="Amount" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
theme_type_variation = &"ValSlider"
min_value = 1.0
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("1_hwtdy")
prefix = "Amount:"

[node name="Hue" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
theme_type_variation = &"ValSlider"
max_value = 180.0
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("1_hwtdy")
prefix = "Hue:"

[node name="Saturation" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
theme_type_variation = &"ValSlider"
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("1_hwtdy")
prefix = "Saturation:"

[node name="Value" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
theme_type_variation = &"ValSlider"
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("1_hwtdy")
prefix = "Value:"
